<resources>
    <string name="app_name">Screen Recorder Live Stream Recorder</string>
    <string name="start_recording">START</string>
    <string name="stop_recording">STOP</string>
    <string name="record_audio">Record Audio</string>
    <string name="high_definition">High Definition</string>
    <string name="standard_definition">Standard Definition</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_video_resolution">Resolution</string>
    <string name="title_record_audio">Record Audio</string>

    <string name="summary_video_resolution">Specify video size</string>
    <string name="summary_record_audio">Recording internal audio is not allowed by Android. Use microphone to record.</string>


    <string name="key_record_audio">key_record_audio</string>
    <string name="key_video_resolution">key_video_resolution</string>
    <string name="key_video_fps">key_video_fps</string>
    <string name="key_video_bitrate">key_video_bitrate</string>
    <string name="key_show_notification">key_show_notification</string>
    <string name="key_video_encoder">key_video_encoder</string>
    <string name="key_audio_source">key_audio_source</string>
    <string name="key_output_format">key_output_format</string>
    <string name="key_share_app">key_share_app</string>
    <string name="key_privacy_policy">key_privacy_policy</string>
    <string name="key_app_version">key_app_version</string>
    <string name="key_orientation">key_orientation</string>
    <string name="key_countdown">key_countdown</string>


    <string name="create_floating_widget">Create Floating Widget</string>
    <string name="floating_widget_label">Floating Widget Label</string>
    <string name="floating_widget_details">Floating Widget Details</string>
    <string name="draw_other_app_permission_denied">Draw over other app permission not available. App won\'t work without permission. Please try again.</string>


    <string name="facebook_app_id">636414803521202</string>
    <string name="fb_login_protocol_scheme">fb636414803521202</string>

    <!--Video settings-->
    <string name="setting_video_bitrate">setting_video_bitrate</string>
    <string name="setting_video_resolution">setting_video_resolution</string>
    <string name="setting_video_fps">setting_video_fps</string>

    <!--Camera settings-->
    <string name="setting_camera_mode">setting_camera_mode</string>
    <string name="setting_camera_position">setting_camera_position</string>
    <string name="setting_camera_size">setting_camera_size</string>

    <!--Audio settings-->
    <string name="setting_audio_source">setting_audio_source</string>


    <!--Common Setting-->
    <string name="setting_common_orientation">setting_common_orientation</string>
    <string name="setting_common_countdown">setting_common_countdown</string>

    <!--Default setting-->
    <string name="default_setting_resolution">Default</string>
    <string name="default_setting_bitrate">-1</string>
    <string name="default_setting_fps">30</string>
    <string name="default_setting_countdown">3</string>
    <string name="default_setting_orientation">Portrait</string>
    <string name="default_camera_mode">Front</string>
    <string name="default_camera_position">Top Left</string>
    <string name="default_camera_size">Medium</string>
    <string name="default_audio_source">Microphone</string>
    <string name="file_created">File created</string>
    <string name="file_create_error">File create error</string>
    <string name="pref_drive_folderId">pref_drive_folderId</string>

    <string name="notify_record">Record</string>
    <string name="notify_stop">Stop</string>
    <string name="notify_shutdown">Shutdown</string>

</resources>
